refactor: replace mkMap/mkEntry with Map.of/Map.entry in clients module
Replace Utils.mkMap() and Utils.mkEntry() calls with JDK 9+
Map.of() and Map.entry() equivalents throughout the clients module.
Use LinkedHashMap where iteration order matters (toString tests,
partition assignor logic).